syntax = "proto3";

package pb;

option go_package = "github.com/the-medo/talebound-backend/pb";

message ResetPasswordSendCodeRequest {
  string email = 1;
}

message ResetPasswordSendCodeResponse {
  bool success = 1;
  string message = 2;
}

message ResetPasswordVerifyCodeRequest {
  int32 user_id = 1;
  string secret_code = 2;
  string new_password = 3;
}

message ResetPasswordVerifyCodeResponse {
  bool success = 1;
  string message = 2;
}